--- a/package.json
+++ b/package.json
@@ -2,11 +2,18 @@
 	"name": "vorte-data-service",
 	"version": "0.0.0",
 	"private": true,
+	"type": "module",
+	"author": {
+		"email": "lehtinenjori03@gmail.com",
+		"name": "Jori Lehtinen",
+		"url": "https://vorte.app"
+	},
 	"scripts": {
 		"deploy": "wrangler deploy",
 		"dev": "wrangler dev"
 	},
 	"devDependencies": {
-		"wrangler": "^4.27.0"
+		"wrangler": "^4.28.1",
+		"esbuild": "^0.25.8"
 	}
 }
